<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.li.hejion.WriteMessActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <RelativeLayout
        android:id="@+id/write_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_marginLeft="-10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_back"
            android:background="@null"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_write_message"
            android:textColor="@color/light_black"
            android:layout_centerInParent="true"
            android:textSize="20sp"/>

    </RelativeLayout>

    <View
        android:id="@+id/write_view"
        android:layout_below="@id/write_title"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_line"/>



    <ScrollView
        android:layout_below="@id/write_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/login_bg"
        android:layout_marginBottom="110dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/write_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/title_bg"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_titile"
                    android:textColor="@color/main_black"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/title_line"/>

                <EditText
                    android:id="@+id/write_title_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:hint="@string/write_title_hint"
                    android:textColorHint="@color/login_edt_hint"
                    android:textColor="@color/login_edt_hint"
                    android:textSize="14sp"

                    />

                </LinearLayout>


            <LinearLayout
                android:id="@+id/write_content_layout"
                android:layout_below="@id/write_title_layout"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/title_bg"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_content"
                    android:textColor="@color/main_black"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/title_line"/>

                <EditText
                    android:id="@+id/write_content_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:hint="@string/write_message_hint"
                    android:textColorHint="@color/login_edt_hint"
                    android:textColor="@color/login_edt_hint"
                    android:textSize="14sp"

                    />


            </LinearLayout>

            <com.li.hejion.Widget.ImgGridview
                android:id="@+id/write_image_gv"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_below="@id/write_content_layout"
                android:verticalSpacing="10dp"
                android:numColumns="6"/>


            <LinearLayout

                android:id="@+id/video_voice_bg_layout"
                android:layout_below="@id/write_image_gv"
                android:layout_width="fill_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/video_layout"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginRight="10dp"
                    >
                    <ImageView
                        android:id="@+id/video_play"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:src="@drawable/video_bg1"/>
                    <ImageView
                        android:id="@+id/video_close_btn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/close"

                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/voice_layout"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"

                    android:visibility="gone"
                    >
                    <ImageView
                        android:id="@+id/voice_play"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:src="@drawable/voice_bg_normal"/>
                    <ImageView
                        android:id="@+id/voice_close_btn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/close"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </LinearLayout>


            <Button
                android:id="@+id/write_send_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_login"

                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/white"
                android:text="@string/write_send"
                android:textSize="20sp"
                android:layout_below="@id/video_voice_bg_layout"/>

            </RelativeLayout>



    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/bottom_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/write_audio_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/btn_voice"
                android:scaleType="fitXY"
                android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:text="@string/write_voice"
                android:layout_marginTop="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/write_vedio_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:src="@drawable/btn_vedio"
                android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:text="@string/write_vedio"
                android:layout_marginTop="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/write_image_btn"
                android:scaleType="fitXY"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/btn_image"
                android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:text="@string/write_image"
                android:layout_marginTop="5dp"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
