<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.li.hejion.InfoActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_marginLeft="-10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_back"
            android:background="@null"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_info"
            android:textColor="@color/light_black"
            android:layout_centerInParent="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_login"
            android:layout_marginRight="10dp"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:text="保存"
            android:textSize="14sp"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_line"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:background="@color/login_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/info_head_border"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:id="@+id/info_head_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/head_nomal"/>

                    <TextView
                        android:id="@+id/info_change_img"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/login_edt_hint"
                        android:textSize="14sp"
                        android:text="@string/change_head_image"
                        android:gravity="center_vertical"
                        android:drawablePadding="15dp"
                        android:drawableRight="@drawable/arrow_right"/>


                </RelativeLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/info_line"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/info_name"
                        android:layout_centerVertical="true"
                        android:textColor="@color/main_black"/>


                    <EditText
                        android:id="@+id/info_name"
                        android:background="@null"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/login_edt_hint"
                        android:textSize="14sp"
                        android:text=""
                        android:gravity="center_vertical"
                        android:drawablePadding="15dp"
                        android:drawableRight="@drawable/arrow_right"/>



                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:orientation="vertical"
                android:background="@drawable/info_sex_border">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/info_sex"
                        android:layout_centerVertical="true"
                        android:textColor="@color/main_black"/>


                    <EditText
                        android:id="@+id/info_sex"
                        android:background="@null"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/login_edt_hint"
                        android:textSize="14sp"
                        android:text=""
                        android:gravity="center_vertical"
                        android:drawablePadding="15dp"
                        android:drawableRight="@drawable/arrow_right"/>



                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/info_line"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/info_city"
                        android:layout_centerVertical="true"
                        android:textColor="@color/main_black"/>


                    <EditText
                        android:id="@+id/info_area"
                        android:background="@null"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/login_edt_hint"
                        android:textSize="14sp"
                        android:text=""
                        android:gravity="center_vertical"
                        android:drawablePadding="15dp"
                        android:drawableRight="@drawable/arrow_right"/>



                </RelativeLayout>

                </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:background="@drawable/info_introduce_border">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/info_introuce_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/info_introduce"
                    android:layout_centerVertical="true"
                    android:textColor="@color/main_black"/>


                <EditText
                    android:background="@null"
                    android:id="@+id/info_introduce"
                    android:layout_toRightOf="@id/info_introuce_title"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_edt_hint"
                    android:textSize="14sp"
                    android:text=""
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:drawablePadding="15dp"
                    android:drawableRight="@drawable/arrow_right"/>



            </RelativeLayout>
        </LinearLayout>


        </LinearLayout>


    </ScrollView>





</LinearLayout>